--- a/bitzy.css
+++ b/bitzy.css
@@ -72,6 +72,7 @@ button, input[type="button"] {
   background: #777;
   color: #fff;
   letter-spacing: 1px;
+  outline: none;
 }
 button:hover, input[type="button"]:hover {
   background: #5e5e5e;
